Add release notes

--- a/_includes/download_cutter_area.html
+++ b/_includes/download_cutter_area.html
@@ -3,21 +3,31 @@
         <div class="download-wrapper">
             <div class="row">
                 <div class="col-md-7">
-                <div class="download-content">
-                    <div class="section-title m-b-40">
-                        <h2 class="big-font2">Cutter is available for all major platforms</h2>
-                        <p>Cutter was built as a cross-platform application so you can use it on your favorite operating system.</p>
+                    <div class="download-content">
+                        <div class="section-title m-b-40">
+                            <h2 class="big-font2">Cutter is available for all major platforms</h2>
+                            <p>Cutter was built as a cross-platform application so you can use it on your favorite operating system.</p>
+                        </div>
+                        <div class=" m-b-30">
+                            
+                            <h3 style="display:inline;">Download Cutter version</h3>  <div style="display:inline;" id="cutterVersion" class="blog-share-tags blog-spacing col-md-5 heading-5"></div>
+                        </div>
+                        <ul class="banner-btn m-0 list-inline w-75">
+                            <li class="list-inline-item"><a id="downloadLinux" href="#" class="dwn-btn3 btn btn-primary"><i class="fab fa-1x fa-linux"></i> Linux</span></a></li> 
+                            <li class="list-inline-item"><a id="downloadWindows" href="#" class="dwn-btn3 btn btn-primary"><i class="fab fa-1x fa-windows"></i> Windows</span></a></li>
+                            <li class="list-inline-item"><a id="downloadMacOS" href="#" class="dwn-btn3 btn btn-primary"><i class="fab fa-1x fa-apple"></i> macOS</span></a></li>
+                        </ul>
                     </div>
-                    <div class=" m-b-30">
-                        
-                        <h3 style="display:inline;">Download Cutter version</h3>  <div style="display:inline;" id="cutterVersion" class="blog-share-tags blog-spacing col-md-5 heading-5"></div>
+                    <p class="mt-3">
+                        <a class="btn btn-outline-secondary w-75" data-toggle="collapse" href="#release-notes" role="button" aria-expanded="false" aria-controls="release-notes">
+                            Release Notes
+                        </a>
+                    </p>
+                    <div class="collapse" id="release-notes">
+                        <div class="card card-body" id="release-notes-content" markdown="1">
+                        </div>
                     </div>
-                    <ul class="banner-btn m-0 list-inline">
-                        <li class="list-inline-item"><a id="downloadLinux" href="#" class="dwn-btn3 btn btn-primary"><i class="fab fa-1x fa-linux"></i> Linux</span></a></li> 
-                        <li class="list-inline-item"><a id="downloadWindows" href="#" class="dwn-btn3 btn btn-primary"><i class="fab fa-1x fa-windows"></i> Windows</span></a></li>
-                        <li class="list-inline-item"><a id="downloadMacOS" href="#" class="dwn-btn3 btn btn-primary"><i class="fab fa-1x fa-apple"></i> macOS</span></a></li>
-                    </ul>
-                </div>
+
                 </div>
                 <div class="col-md-3 offset-lg-2">
                 <!-- <div class="cutter-graph-img aos-init aos-animate" data-aos="fade-up-left"><img src="{{site.baseurl}}/assets/images/mockup.png" alt="apps screenshot image"></div> -->
