--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,5 +48,6 @@
       <!-- jQuery -->
       <script src="{{site.baseurl}}/assets/js/vendor.min.js"></script>
       <script src="{{site.baseurl}}/assets/js/app.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/showdown/1.9.1/showdown.js" integrity="sha512-bvV1V1YSjP1fbfKJjTlNmdnUO2XpsLYUdKwmz5UXBi5U+x40rx9JpA0ooQUMZfpz1MaaBC0ydNLoC6r0sitPUQ==" crossorigin="anonymous"></script>
    </body>
 </html>
